--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash.difference": "^4.5.0",
     "lodash.sample": "^4.2.1",
     "lodash.union": "^4.6.0",
-    "lodash.without": "^4.4.0"
+    "lodash.without": "^4.4.0",
+    "uuid": "^9.0.0"
   }
 }
